# pymoo-dashboard

./: .gitignore  Dashboard.css  Dashboard.html  Dashboard.js  Dashboard.py  README.md  app.py  build.sh  main.py  pyproject.toml  requirements.txt
frontend/: app.vue  nuxt.config.ts  package-lock.json  package.json
frontend/components/: ImageWidget.vue  Widget.vue
frontend/pages/: index.vue
frontend/plugins/: vue_sse.js
nuxt-module/: package-lock.json
src/pymoo_dashboard/: Dashboard.py
static/js/: sseClient.js
templates/: app.html
